--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   # ---------------------------
   # Postgres database
   # ---------------------------
-  ls_postgres:
+  ls-postgres:
     image: postgres:15
-    container_name: ls_postgres
+    container_name: ls-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -14,22 +14,29 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - backend
 
   # ---------------------------
   # MinIO object storage
   # ---------------------------
-  ls_minio:
+  ls-minio:
     image: minio/minio:latest
-    container_name: ls_minio
+    container_name: ls-minio
     command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
+      MINIO_BROWSER: "on"        # enable browser
+      MINIO_DOMAIN: ""  # allow browser requests via localhost
     volumes:
       - minio_data:/data
     ports:
       - "9000:9000"
-      - "9001:9001" # MinIO console
+      - "9001:9001"
+    networks:
+      - backend
+
 
   # ---------------------------
   # Label Studio 
@@ -42,8 +49,10 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - ls_postgres
-      - ls_minio
+      - ls-postgres
+      - ls-minio
+    networks:
+      - backend
 
   # ---------------------------
   # Helper container for bootstrap/export
@@ -52,15 +61,20 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/helper.Dockerfile
-    container_name: ls_helper
+    container_name: ls-helper
     volumes:
       - .:/workspace
-    network_mode: service:labelstudio
+    networks:
+      - backend
     tty: true
 
 
 volumes:
   postgres_data:
   minio_data:
+
+networks:
+  backend:
+    driver: bridge
 
 
